# gdk-input

./: .gitmodules  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  annotated.html  classes.html  classgdk_1_1configurator-members.html  classgdk_1_1configurator.html  classgdk_1_1controls-members.html  classgdk_1_1controls.html  classgdk_1_1gamepad-members.html  classgdk_1_1gamepad.html  classgdk_1_1gamepad__glfw-members.html  classgdk_1_1gamepad__glfw.html  classgdk_1_1input_1_1context-members.html  classgdk_1_1input_1_1context.html  classgdk_1_1input_1_1glfw__context-members.html  classgdk_1_1input_1_1glfw__context.html  classgdk_1_1keyboard-members.html  classgdk_1_1keyboard.html  classgdk_1_1keyboard__glfw-members.html  classgdk_1_1keyboard__glfw.html  classgdk_1_1mouse-members.html  classgdk_1_1mouse.html  classgdk_1_1mouse__glfw-members.html  classgdk_1_1mouse__glfw.html  classjfc_1_1ring__buffer-members.html  classjfc_1_1ring__buffer.html  classjfc_1_1ring__buffer_1_1const__iterator-members.html  classjfc_1_1ring__buffer_1_1const__iterator.html  classjfc_1_1ring__buffer_1_1iterator-members.html  classjfc_1_1ring__buffer_1_1iterator.html  classjfc_1_1state__machine-members.html  classjfc_1_1state__machine.html  cmake_install.cmake  configurator_8h_source.html  controls_8h_source.html  dir_1408713fc6f8475a4f2246e9802ae6be.html  (+35 more)
demos/: CMakeLists.txt  main.cpp
demos/common_headers/: glfw_init.h
demos/common_headers/demo/: glfw_init.h
demos/interface_based/: CMakeLists.txt  main.cpp
demos/interface_based/lib/include/: inputlib.h
demos/interface_based/usr/src/: main.cpp
demos/simple/: CMakeLists.txt  configurator_proof_of_concept_but_nasty_impl.cpp  main.cpp
docs/: CMakeLists.txt
impl/glfw/include/gdk/: glfw_keyboard.h
impl/glfw/src/: glfw_gamepad.cpp  glfw_keyboard.cpp  glfw_mouse.cpp
impl/include/gdk/: glfw_context.h  glfw_gamepad.h  glfw_mouse.h
impl/src/: glfw_context.cpp
include/gdk/: configurator.h  controls.h  gamepad.h  gamepad_glfw.h  gamepads.h  input_context.h  keyboard.h  keyboard_glfw.h  mouse.h  mouse_glfw.h
include/jfc/: ring_buffer.h
opt/glfw_implementation/include/gdk/: gamepad_glfw.h  glfw_context.h  keyboard_glfw.h  mouse_glfw.h
opt/glfw_implementation/src/: gamepads_glfw.cpp  glfw_context.cpp  keyboard_glfw.cpp  mouse_glfw.cpp
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  searchdata.js
src/: configurator.cpp  controls.cpp  enum_ostreams.cpp  gamepads.cpp_backup  gamepads_glfw.cpp  input_context.cpp  keyboard_glfw.cpp  mouse_glfw.cpp
test/: CMakeLists.txt  example_test.cpp  gamepad_test.cpp  keyboard_test.cpp  mouse_test.cpp  test_include.h
